objects/Visit_Report_Information__c.object
<CustomObject>
    <description>Instead of showing two related lists (for private and public objects), there will be one combined list and based on rights user will be redirected to the right object of visit report.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visit Report Information</relationshipLabel>
        <relationshipName>Visit_Report_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Visit__c</fullName>
        <formula>Visit_Report_Name__r.Date_of_Visit__c</formula>
        <label>Date of Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>Visit_Report_Name__r.Location__c</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Report_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Visit Report Name</label>
        <referenceTo>Visit_Report__c</referenceTo>
        <relationshipLabel>Visit Report Information</relationshipLabel>
        <relationshipName>Visit_Report_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit_Report_Owner__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Visit_Report_Name__r.OwnerId , Visit_Report_Name__r.Owner:User.FirstName &amp; &apos; &apos; &amp; Visit_Report_Name__r.Owner:User.LastName)</formula>
        <label>Visit Report Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Type__c</fullName>
        <formula>TEXT(Visit_Report_Name__r.Visit_Type__c)</formula>
        <label>Visit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Visit_Report_Informations__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Visit Report Informations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Visit Report Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Visit Report Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Report Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>